Fix Board not making an isolated copy of the ship objects it gets on creation, enable CI/CD tests